<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="16dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_button_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/note_color_red"
        android:textAllCaps="false"
        android:textColor="@color/app_icon_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/app_icon_color" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/note_color_green"
        android:textAllCaps="false"
        android:textColor="@color/app_icon_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/app_icon_color" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_button_yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/note_color_yellow"
        android:textAllCaps="false"
        android:textColor="@color/app_icon_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/app_icon_color" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_button_none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/note_color_none"
        android:textAllCaps="false"
        android:textColor="@color/app_icon_color"
        android:textSize="16sp"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>