<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/activity_form_note_close"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@drawable/ic_baseline_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/activity_form_note_menu"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activity_form_note_menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start|center"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:text="@string/activity_form_note_new"
            android:textColor="@color/app_title_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/activity_form_note_delete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/activity_form_note_close"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/activity_form_note_delete"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/ic_baseline_background_ripple"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@drawable/ic_baseline_delete"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/activity_form_note_check"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/activity_form_note_menu"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/activity_form_note_check"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/ic_baseline_background_ripple"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@drawable/ic_baseline_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/activity_form_note_delete"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/activity_form_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="start|top"
        android:hint="@string/activity_form_note_hint_title"
        android:inputType="text|textShortMessage"
        android:padding="16dp"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck"
        tools:text="My first note" />

    <View
        android:id="@+id/activity_form_note_separator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/color_primary" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/activity_form_note_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:gravity="start|top"
        android:hint="@string/activity_form_note_hint_description"
        android:inputType="textMultiLine|textLongMessage"
        android:padding="16dp"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck"
        tools:text="My first description" />

</androidx.appcompat.widget.LinearLayoutCompat>